--- a/MachineLearningImageRecognition/Base.lproj/Main.storyboard
+++ b/MachineLearningImageRecognition/Base.lproj/Main.storyboard
@@ -1,24 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MachineLearningImageRecognition" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vQT-wI-hGO">
+                                <rect key="frame" x="49" y="112" width="304" height="369"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sm2-b3-uzS">
+                                <rect key="frame" x="149" y="585" width="104" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="RD0-vO-V8x"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Change"/>
+                                <connections>
+                                    <action selector="changeClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="svn-1a-W33"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QPZ-7r-ecy">
+                                <rect key="frame" x="49" y="509" width="304" height="68"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="68" id="kwY-0y-5rT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Sm2-b3-uzS" firstAttribute="top" secondItem="QPZ-7r-ecy" secondAttribute="bottom" constant="8" id="AQA-rP-qut"/>
+                            <constraint firstItem="vQT-wI-hGO" firstAttribute="trailing" secondItem="QPZ-7r-ecy" secondAttribute="trailing" id="EWu-dx-I0Q"/>
+                            <constraint firstItem="Sm2-b3-uzS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="149" id="Hqj-gM-R08"/>
+                            <constraint firstItem="QPZ-7r-ecy" firstAttribute="top" secondItem="vQT-wI-hGO" secondAttribute="bottom" constant="28" id="KBd-Aa-3Kc"/>
+                            <constraint firstItem="vQT-wI-hGO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="53" id="Vuq-TW-P6l"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Sm2-b3-uzS" secondAttribute="bottom" constant="177" id="W9v-E4-OZN"/>
+                            <constraint firstItem="vQT-wI-hGO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="49" id="crI-qM-rDV"/>
+                            <constraint firstItem="vQT-wI-hGO" firstAttribute="leading" secondItem="QPZ-7r-ecy" secondAttribute="leading" id="hja-ge-SbS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vQT-wI-hGO" secondAttribute="trailing" constant="40" id="lW4-oC-d7C"/>
+                            <constraint firstItem="QPZ-7r-ecy" firstAttribute="centerX" secondItem="Sm2-b3-uzS" secondAttribute="centerX" id="n81-5p-Mc1"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="vQT-wI-hGO" id="k9Z-WS-4O0"/>
+                        <outlet property="resultLabel" destination="QPZ-7r-ecy" id="tar-Rx-xUC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.824427480916029" y="-27.464788732394368"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
